--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,9 @@ Thumbs.db
 # Package lock (optional - uncomment if you want to ignore)
 # package-lock.json
 
+# Sensitive files with API keys and secrets
+functions/api.js
+hijama-backend/config/stripe-keys.js
+config/stripe-keys.js
+tools/fetch-firebase-config.js
+
