--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,10 @@ Thumbs.db
 
 # Sensitive files with API keys and secrets
 functions/api.js
+functions/index.js
 hijama-backend/config/stripe-keys.js
 config/stripe-keys.js
 tools/fetch-firebase-config.js
+tools/setup-env.js
+.env
 
